# ProteinConformers

./: README.md  pyproject.toml
configs/: all_sequences.fasta  benchmark_seqs.fasta
configs/esmdiff/experiment/: mdlm.yaml
src/eval/: eval_decoy_metrics.py  eval_utils.py  readme_eval.md
src/pdbench/: builder.py
src/pdbench/benchmark_methods/: bioemu_sampler.py  esmdiff_sampler.py
src/pdbench/evaluate/: data_process.py
src/pdbench/utils/: data_utils.py  eval_utils.py  gen_xtc_fel.py  sampler.py
tools/: tools_calculate_fel_overlaps.py  tools_calculate_tm_score.py  tools_convert_bioemu_npz2pdb.py  tools_free_energy_landscape.py  tools_generate_conformations.py  tools_pcpm_distribution.py  tools_pcpm_individual.py  tools_pcps.py
